[gd_scene load_steps=29 format=3 uid="uid://cc4w4bxorccxb"]

[ext_resource type="Script" path="res://Spaceship/Miners/miner.gd" id="1_0tgug"]
[ext_resource type="Texture2D" uid="uid://bgdfnhv1ru55x" path="res://Assets/synthisyser.png" id="2_k446q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cbet4"]
atlas = ExtResource("2_k446q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nglmd"]
atlas = ExtResource("2_k446q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qa61f"]
atlas = ExtResource("2_k446q")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu3os"]
atlas = ExtResource("2_k446q")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcccg"]
atlas = ExtResource("2_k446q")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1dlc"]
atlas = ExtResource("2_k446q")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3ala"]
atlas = ExtResource("2_k446q")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_767s7"]
atlas = ExtResource("2_k446q")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_guhre"]
atlas = ExtResource("2_k446q")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgkca"]
atlas = ExtResource("2_k446q")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5ii4"]
atlas = ExtResource("2_k446q")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj4ti"]
atlas = ExtResource("2_k446q")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dodb"]
atlas = ExtResource("2_k446q")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_it4bv"]
atlas = ExtResource("2_k446q")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_alqpr"]
atlas = ExtResource("2_k446q")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21uls"]
atlas = ExtResource("2_k446q")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxssf"]
atlas = ExtResource("2_k446q")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv1w0"]
atlas = ExtResource("2_k446q")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttfkx"]
atlas = ExtResource("2_k446q")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iebfu"]
atlas = ExtResource("2_k446q")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fphcd"]
atlas = ExtResource("2_k446q")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6gky"]
atlas = ExtResource("2_k446q")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsbvn"]
atlas = ExtResource("2_k446q")
region = Rect2(672, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xuryy"]
animations = [{
"frames": [SubResource("AtlasTexture_cbet4")],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [SubResource("AtlasTexture_nglmd"), SubResource("AtlasTexture_qa61f"), SubResource("AtlasTexture_gu3os"), SubResource("AtlasTexture_dcccg"), SubResource("AtlasTexture_p1dlc"), SubResource("AtlasTexture_h3ala"), SubResource("AtlasTexture_767s7"), SubResource("AtlasTexture_guhre"), SubResource("AtlasTexture_cgkca"), SubResource("AtlasTexture_h5ii4"), SubResource("AtlasTexture_xj4ti"), SubResource("AtlasTexture_1dodb"), SubResource("AtlasTexture_it4bv"), SubResource("AtlasTexture_alqpr"), SubResource("AtlasTexture_21uls"), SubResource("AtlasTexture_nxssf"), SubResource("AtlasTexture_xv1w0"), SubResource("AtlasTexture_ttfkx"), SubResource("AtlasTexture_iebfu"), SubResource("AtlasTexture_fphcd"), SubResource("AtlasTexture_m6gky"), SubResource("AtlasTexture_tsbvn")],
"loop": false,
"name": &"start",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_caprw"]
size = Vector2(30, 34)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_46cav"]
properties/0/path = NodePath(".:copper")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:active")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath(".:upg_eff_cost")
properties/2/spawn = true
properties/2/sync = true

[node name="Miner" type="Node2D"]
z_index = 1
script = ExtResource("1_0tgug")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
frames = SubResource("SpriteFrames_xuryy")
animation = &"idle"
speed_scale = 1.5
playing = true

[node name="MinerRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MinerRadius"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_caprw")

[node name="GeodeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_46cav")

[connection signal="body_entered" from="MinerRadius" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="MinerRadius" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="GeodeTimer" to="." method="_on_geode_timer_timeout"]
